--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "email": "masayuki@izumin.info",
     "url": "https://github.com/izumin5210"
   },
+  "dependencies": {
+    "normalize.css": "^7.0.0"
+  },
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -16,9 +20,22 @@
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
+    "css-loader": "^0.28.1",
     "electron": "^1.6.6",
+    "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "npm-run-all": "^4.0.2",
+    "postcss-apply": "^0.6.1",
+    "postcss-calc": "^5.3.1",
+    "postcss-csso": "^2.0.0",
+    "postcss-custom-properties": "^5.0.2",
+    "postcss-flexbugs-fixes": "^2.1.1",
+    "postcss-loader": "^1.3.3",
+    "postcss-reporter": "^3.0.0",
+    "postcss-smart-import": "^0.6.12",
+    "style-loader": "^0.17.0",
+    "stylelint-config-standard": "^16.0.0",
+    "stylelint-declaration-strict-value": "^1.0.3",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5",
     "webpack-merge": "^4.1.0"
@@ -28,6 +45,8 @@
   "private": true,
   "repository": "git@github.com:izumin5210/smap.git",
   "scripts": {
+    "lint": "run-p lint:*",
+    "lint:css": "stylelint 'src/**/*.css'",
     "start": "electron ./dist/main.js",
     "start:dev": "run-p start:dev:*",
     "start:dev:app": "electron -r babel-register ./src/main.js",
