--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "eslint": "^3.19.0",
     "eslint-config-izumin5210": "^0.2.4",
     "eslint-loader": "^1.7.1",
+    "eslint-plugin-flowtype-errors": "^3.2.0",
     "extract-text-webpack-plugin": "^2.1.0",
+    "flow-bin": "^0.45.0",
+    "flow-typed": "^2.1.2",
     "html-webpack-plugin": "^2.28.0",
     "npm-run-all": "^4.0.2",
     "postcss-apply": "^0.6.1",
@@ -55,6 +58,7 @@
     "lint:js": "run-p lint:js:*",
     "lint:js:scripts": "eslint scripts",
     "lint:js:src": "eslint src",
+    "postinstall": "flow-typed install",
     "start": "electron ./dist/main.js",
     "start:dev": "run-p start:dev:*",
     "start:dev:app": "electron -r babel-register ./src/main.js",
