--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "url": "https://github.com/izumin5210"
   },
   "dependencies": {
-    "normalize.css": "^7.0.0"
+    "normalize.css": "^7.0.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
@@ -40,6 +44,10 @@
     "postcss-loader": "^1.3.3",
     "postcss-reporter": "^3.0.0",
     "postcss-smart-import": "^0.6.12",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
+    "redux-logger": "^3.0.1",
     "style-loader": "^0.17.0",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
