--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
+    "react-split-pane": "^0.1.63",
     "redux": "^3.6.0"
   },
   "devDependencies": {
