Introduce react-ace

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "url": "https://github.com/izumin5210"
   },
   "dependencies": {
+    "brace": "^0.10.0",
     "normalize.css": "^7.0.0",
     "react": "^15.5.4",
+    "react-ace": "^4.2.1",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-split-pane": "^0.1.63",
