--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "react-split-pane": "^0.1.63",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "remark": "^7.0.1",
+    "remark-react": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
