--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^5.0.4",
     "react-split-pane": "^0.1.63",
     "redux": "^3.6.0",
+    "redux-actions": "^2.0.2",
     "remark": "^7.0.1",
     "remark-react": "^4.0.0"
   },
