--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "redux": "^3.6.0",
     "redux-actions": "^2.0.2",
     "remark": "^7.0.1",
-    "remark-react": "^4.0.0"
+    "remark-react": "^4.0.0",
+    "reselect": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
