--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.4.0",
+    "babel-preset-power-assert": "^1.0.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
     "css-loader": "^0.28.1",
     "electron": "^1.6.6",
+    "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-config-izumin5210": "^0.2.5",
     "eslint-loader": "^1.7.1",
@@ -44,6 +46,8 @@
     "flow-bin": "^0.45.0",
     "flow-typed": "^2.1.2",
     "html-webpack-plugin": "^2.28.0",
+    "ignore-styles": "^5.0.1",
+    "mocha": "^3.3.0",
     "npm-run-all": "^4.0.2",
     "postcss-apply": "^0.6.1",
     "postcss-calc": "^5.3.1",
@@ -53,6 +57,8 @@
     "postcss-loader": "^1.3.3",
     "postcss-reporter": "^3.0.0",
     "postcss-smart-import": "^0.6.12",
+    "power-assert": "^1.4.2",
+    "react-test-renderer": "^15.5.4",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
@@ -61,6 +67,7 @@
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-declaration-use-variable": "^1.6.0",
+    "testdouble": "^2.1.2",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5",
     "webpack-merge": "^4.1.0"
@@ -81,6 +88,8 @@
     "start:dev": "run-p start:dev:*",
     "start:dev:app": "electron -r babel-register ./src/main.js",
     "start:dev:server": "webpack-dev-server --config ./scripts/webpack/config.renderer.dev.js",
+    "test": "run-p test:*",
+    "test:js": "NODE_PATH=$PWD/src mocha",
     "typecheck": "flow"
   }
 }
