--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "lint:js": "run-p lint:js:*",
     "lint:js:scripts": "eslint scripts",
     "lint:js:src": "eslint src",
+    "lint:js:test": "eslint test",
     "postinstall": "flow-typed install",
     "pretest": "run-p lint typecheck",
     "start": "electron ./dist/main.js",
