--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "brace": "^0.10.0",
     "immutable": "https://github.com/oreqizer/immutable-js.git#1f66a82",
     "mdast-comment-marker": "https://github.com/izumin5210/mdast-comment-marker.git#3c5966c",
+    "mdast-util-to-hast": "^2.4.0",
     "mdast-util-toc": "^2.0.1",
     "normalize.css": "^7.0.0",
     "react": "^15.5.4",
@@ -23,6 +24,7 @@
     "remark": "^7.0.1",
     "remark-react": "^4.0.0",
     "reselect": "^3.0.0",
+    "unist-builder": "^1.0.2",
     "unist-util-visit": "^1.1.1"
   },
   "devDependencies": {
@@ -65,6 +67,7 @@
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
     "redux-logger": "^3.0.1",
+    "remark-html": "^6.0.0",
     "style-loader": "^0.17.0",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
