--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "brace": "^0.10.0",
     "immutable": "https://github.com/oreqizer/immutable-js.git#1f66a82",
+    "lodash": "^4.17.4",
     "mdast-comment-marker": "https://github.com/izumin5210/mdast-comment-marker.git#3c5966c",
     "mdast-util-to-hast": "^2.4.0",
     "mdast-util-toc": "^2.0.1",
