--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "smap",
-  "description": "Slide writer with Markdown and Pug",
+  "name": "OHP",
+  "description": "OHP is handy presentation tool",
   "version": "1.0.0",
   "author": {
     "name": "Masayuki Izumi",
@@ -81,7 +81,7 @@
   "license": "MIT",
   "main": "index.js",
   "private": true,
-  "repository": "git@github.com:izumin5210/smap.git",
+  "repository": "git@github.com:izumin5210/OHP.git",
   "scripts": {
     "lint": "run-p lint:*",
     "lint:css": "stylelint 'src/**/*.css'",
