--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^15.5.4",
     "react-ace": "^4.2.1",
     "react-dom": "^15.5.4",
+    "react-measure": "^1.4.7",
     "react-redux": "^5.0.4",
     "react-split-pane": "^0.1.63",
     "redux": "^3.6.0",
