Introduce ReactShadow to use user defined styles

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^15.5.4",
     "react-measure": "^1.4.7",
     "react-redux": "^5.0.4",
+    "react-shadow": "^2.0.2",
     "react-split-pane": "^0.1.63",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.2",
