--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-split-pane": "^0.1.63",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.2",
+    "redux-saga": "^0.15.3",
     "remark": "^7.0.1",
     "remark-react": "^4.0.0",
     "reselect": "^3.0.0",
