--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "react-dom": "^15.5.4",
     "react-measure": "^1.4.7",
     "react-redux": "^5.0.4",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "next",
     "react-shadow": "^2.0.2",
     "react-split-pane": "^0.1.63",
     "redux": "^3.6.0",
