Introduce react-hot-loader

--- a/.babelrc
+++ b/.babelrc
@@ -30,7 +30,8 @@
           {
             "embedAst": true
           }
-        ]
+        ],
+        "react-hot-loader/babel"
       ]
     },
     "production": {
