--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "postcss-reporter": "^3.0.0",
     "postcss-smart-import": "^0.6.12",
     "power-assert": "^1.4.2",
+    "react-hot-loader": "3.0.0-beta.7",
     "react-test-renderer": "^15.5.4",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
