--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-ace": "^4.2.1",
     "react-addons-perf": "^15.4.2",
     "react-dom": "^15.5.4",
+    "react-helmet": "^5.0.3",
     "react-measure": "^1.4.7",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
