--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-addons-perf": "^15.4.2",
     "react-dom": "^15.5.4",
     "react-helmet": "^5.0.3",
+    "react-lowlight": "^1.0.6",
     "react-measure": "^1.4.7",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
