--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-flowtype-errors": "^3.2.1",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "flow-bin": "^0.46.0",
     "flow-typed": "^2.1.2",
     "html-webpack-plugin": "^2.28.0",
