--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "redux-actions": "^2.0.2",
     "redux-saga": "^0.15.3",
     "remark": "^7.0.1",
-    "remark-react": "^4.0.0",
+    "remark-react": "https://github.com/izumin5210/remark-react.git#9e53bc8",
     "remark-yaml-meta": "https://github.com/izumin5210/remark-yaml-meta.git#3387774",
     "reselect": "^3.0.0",
     "unist-builder": "^1.0.2",
