--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "remark-react": "https://github.com/izumin5210/remark-react.git#9e53bc8",
     "remark-yaml-meta": "https://github.com/izumin5210/remark-yaml-meta.git#3387774",
     "reselect": "^3.0.0",
+    "scrollparent": "^2.0.1",
     "unist-builder": "^1.0.2",
     "unist-util-visit": "^1.1.1"
   },
