--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "webpack-merge": "^4.1.0"
   },
   "license": "MIT",
-  "main": "dist/main/index.js",
+  "main": "dist/main.js",
   "private": true,
   "repository": "git@github.com:izumin5210/OHP.git",
   "scripts": {
@@ -111,7 +111,7 @@
     "lint:js:test": "eslint test",
     "postinstall": "flow-typed install",
     "pretest": "run-p lint typecheck",
-    "start": "electron ./dist/main/index.js",
+    "start": "electron .",
     "start:dev": "run-p start:dev:*",
     "start:dev:app": "electron -r babel-register ./src/main/index.js",
     "start:dev:server": "webpack-dev-server --config ./scripts/webpack/config.renderer.dev.js",
