--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "redux-devtools-log-monitor": "^1.3.0",
     "redux-logger": "^3.0.1",
     "remark-html": "^6.0.0",
+    "rimraf": "^2.6.1",
     "style-loader": "^0.17.0",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
@@ -102,6 +103,7 @@
     "build": "run-p build:*",
     "build:main": "NODE_ENV=production webpack --bail --config ./scripts/webpack/config.main.prod.js",
     "build:renderer": "NODE_ENV=production webpack --bail --config ./scripts/webpack/config.renderer.prod.js",
+    "clean": "rimraf dist",
     "generate:langMap": "node -r babel-register ./scripts/createLangMap.js",
     "lint": "run-p lint:*",
     "lint:css": "stylelint 'src/**/*.css'",
@@ -110,6 +112,7 @@
     "lint:js:src": "eslint src",
     "lint:js:test": "eslint test",
     "postinstall": "flow-typed install",
+    "prebuild": "yarn run clean",
     "pretest": "run-p lint typecheck",
     "start": "electron .",
     "start:dev": "run-p start:dev:*",
