Add packaging script

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "babel-register": "^6.24.1",
     "css-loader": "^0.28.1",
     "electron": "^1.6.6",
+    "electron-builder": "^17.9.0",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-config-izumin5210": "^0.2.5",
@@ -111,8 +112,11 @@
     "lint:js:scripts": "eslint scripts",
     "lint:js:src": "eslint src",
     "lint:js:test": "eslint test",
+    "package": "build",
     "postinstall": "flow-typed install",
     "prebuild": "yarn run clean",
+    "prepackage": "yarn build",
+    "postinstall": "flow-typed install",
     "pretest": "run-p lint typecheck",
     "start": "electron .",
     "start:dev": "run-p start:dev:*",
