Introduce styled-components

--- a/.flowconfig
+++ b/.flowconfig
@@ -2,6 +2,7 @@
 .*/node_modules/immutable/type-definitions/tests/.*
 .*/node_modules/conventional-changelog-core/test/.*
 .*/node_modules/stylelint/.*
+.*/node_modules/styled-components/.*
 ./decls
 
 [include]
