Enable babel-react-optimize

--- a/.babelrc
+++ b/.babelrc
@@ -37,6 +37,9 @@
       ]
     },
     "production": {
+      "presets": [
+        "react-optimize"
+      ],
       "plugins": [
         "unassert"
       ]
