--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-preset-env": "^1.4.0",
     "babel-preset-power-assert": "^1.0.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-react-optimize": "^1.0.1",
     "babel-register": "^6.24.1",
     "css-loader": "^0.28.1",
     "electron": "^1.6.6",
