--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-redux": "next",
     "react-shadow": "^2.0.2",
     "react-split-pane": "^0.1.63",
+    "redbox-react": "^1.3.6",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.3",
     "redux-saga": "^0.15.3",
