--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,11 @@
     "transform-runtime",
     "transform-class-properties",
     "transform-object-rest-spread",
-    "syntax-dynamic-import"
+    "syntax-dynamic-import",
+    [
+      "module-resolver",
+      { "root": ["./src"] }
+    ]
   ],
   "presets": [
     [
