--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redbox-react": "^1.3.6",
     "redux": "^3.6.0",
     "redux-actions": "^2.0.3",
+    "redux-immutable": "^4.0.0",
     "redux-saga": "^0.15.3",
     "remark": "^7.0.1",
     "remark-react": "https://github.com/izumin5210/remark-react.git#9e53bc8",
