--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,9 @@ node_js:
 
 sudo: false
 
-matrix:
-  fast_finish: true
-  include:
-  - os: linux
-    dist: trusty
+os:
+- linux
+- osx
 
 cache:
   yarn: true
@@ -36,3 +34,4 @@ deploy:
   on:
     tags: true
     all_branches: true
+    condition: $TRAVIS_OS_NAME = osx
