--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "classnames": "^2.2.5",
     "immutable": "https://github.com/oreqizer/immutable-js.git#1f66a82",
     "lodash": "^4.17.4",
-    "mdast-comment-marker": "https://github.com/izumin5210/mdast-comment-marker.git#3c5966c",
+    "mdast-comment-marker": "^1.0.2",
     "mdast-util-to-hast": "^2.4.0",
     "mdast-util-toc": "^2.0.1",
     "normalize.css": "^7.0.0",
