--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,9 @@ notifications:
 
 deploy:
 - provider: script
-  script: yarn run package:release
+  script:
+  - yarn package:release
+  skip_cleanup: true
   on:
     tags: true
     all_branches: true
