--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "build:main": "NODE_ENV=production webpack --bail --config ./scripts/webpack/config.main.prod.js",
     "build:renderer": "NODE_ENV=production webpack --bail --config ./scripts/webpack/config.renderer.prod.js",
     "clean": "rimraf dist",
+    "generate:changelog": "conventional-changelog --preset atom --infile CHANGELOG.md --same--file",
     "generate:langMap": "node -r babel-register ./scripts/createLangMap.js",
     "lint": "run-p lint:*",
     "lint:css": "stylelint 'src/**/*.css'",
