--- a/packages/OHP/.gitignore
+++ b/packages/OHP/.gitignore
@@ -47,3 +47,10 @@ jspm_packages
 
 # Yarn Integrity file
 .yarn-integrity
+
+# type definitions from flow-typed repository
+flow-typed
+
+# Build results
+/dist
+/release
