--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "conventional-changelog-cli": "^1.3.1",
+    "flow-bin": "^0.47.0",
     "lerna": "^2.0.0-rc.5"
   },
   "scripts": {
