--- a/packages/OHP/package.json
+++ b/packages/OHP/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "brace": "^0.10.0",
     "classnames": "^2.2.5",
+    "highlight.js": "^9.12.0",
     "immutable": "https://github.com/oreqizer/immutable-js.git#1f66a82",
     "lodash": "^4.17.4",
     "mdast-comment-marker": "^1.0.2",
