--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-izumin5210": "^0.2.5",
     "eslint-plugin-flowtype-errors": "^3.3.0",
     "flow-bin": "^0.47.0",
+    "flow-typed": "^2.1.2",
     "lerna": "^2.0.0-rc.5"
   },
   "scripts": {
