--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ jspm_packages
 
 # Yarn Integrity file
 .yarn-integrity
+
+# type definitions from flow-typed repository
+/flow-typed/npm/*_vx.x.x.js
