--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "url": "https://github.com/izumin5210"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-stage-2": "^6.24.1",
     "conventional-changelog-cli": "^1.3.1",
     "eslint": "^3.19.0",
     "eslint-config-izumin5210": "^0.2.5",
