--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
+    "babel-jest": "^20.0.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
@@ -19,14 +20,18 @@
     "eslint-plugin-flowtype-errors": "^3.3.0",
     "flow-bin": "^0.47.0",
     "flow-typed": "^2.1.2",
+    "jest": "^20.0.4",
     "lerna": "^2.0.0-rc.5"
   },
   "scripts": {
     "generate:changelog": "conventional-changelog --preset atom --infile CHANGELOG.md --same--file",
+    "jest": "jest --config .jestrc.json",
     "lint": "eslint .",
-    "test": "lerna run test",
     "package": "lerna run --scope OHP -- package",
     "package:release": "lerna run --scope OHP -- package:release",
+    "pretest": "yarn typecheck && yarn lint",
+    "test": "yarn jest && lerna run test --scope OHP",
+    "typecheck": "flow",
     "version": "yarn generate:changelog && git add CHANGELOG.md"
   },
   "license": "MIT",
