--- a/package.json
+++ b/package.json
@@ -23,19 +23,21 @@
     "jest": "^20.0.4",
     "lerna": "^2.0.0-rc.5"
   },
+  "license": "MIT",
+  "main": "index.js",
+  "private": true,
+  "repository": "git@github.com:izumin5210/OHP.git",
   "scripts": {
+    "bootstrap": "lerna bootstrap --hoist",
     "generate:changelog": "conventional-changelog --preset atom --infile CHANGELOG.md --same--file",
     "jest": "jest --config .jestrc.json",
     "lint": "eslint .",
     "package": "lerna run --scope OHP -- package",
     "package:release": "lerna run --scope OHP -- package:release",
+    "prebootstrap": "yarn",
     "pretest": "yarn typecheck && yarn lint",
     "test": "yarn jest && lerna run test --scope OHP",
     "typecheck": "flow",
     "version": "yarn generate:changelog && git add CHANGELOG.md"
-  },
-  "license": "MIT",
-  "main": "index.js",
-  "private": true,
-  "repository": "git@github.com:izumin5210/OHP.git"
+  }
 }
