--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^3.19.0",
     "eslint-config-izumin5210": "^0.2.5",
     "eslint-plugin-flowtype-errors": "^3.3.0",
+    "eslint-plugin-jest": "^20.0.3",
     "flow-bin": "^0.47.0",
     "flow-typed": "^2.1.2",
     "jest": "^20.0.4",
