--- a/packages/remark-newpage-directive/package.json
+++ b/packages/remark-newpage-directive/package.json
@@ -11,7 +11,6 @@
     "defaults": "^1.0.3",
     "mdast-directive-comment": "^0.1.1",
     "mdast-util-to-hast": "^2.4.0",
-    "remark-html": "^6.0.0",
     "unist-builder": "^1.0.2"
   },
   "files": [
@@ -33,10 +32,9 @@
     "url": "https://github.com/izumin5210/OHP"
   },
   "scripts": {
-    "build": "yarn build:js && yarn build:es && yarn build:libdef",
+    "build": "yarn build:js && yarn build:es",
     "build:es": "BABEL_ENV=es babel src -d dist/es --ignore test.js",
     "build:js": "babel src -d dist --ignore test.js",
-    "build:libdef": "flow gen-flow-files src/index.js --out-dir dist --ignore '*.test.js'",
     "prepublish": "yarn build"
   }
 }
