--- a/packages/remark-extract-styles/package.json
+++ b/packages/remark-extract-styles/package.json
@@ -8,6 +8,9 @@
     "url": "https://github.com/izumin5210"
   },
   "bugs": "https://github.com/izumin5210/OHP/issues",
+  "dependencies": {
+    "unist-util-visit": "^1.1.1"
+  },
   "files": [
     "dist/"
   ],
