--- a/packages/remark-newpage-directive/package.json
+++ b/packages/remark-newpage-directive/package.json
@@ -35,6 +35,7 @@
     "build": "yarn build:js && yarn build:es",
     "build:es": "BABEL_ENV=es babel src -d dist/es --ignore test.js",
     "build:js": "babel src -d dist --ignore test.js",
-    "prepublish": "yarn build"
+    "clean": "rimraf dist",
+    "prepublish": "yarn run clean && yarn build"
   }
 }
