--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "jest": "^20.0.4",
     "lerna": "^2.0.0-rc.5",
     "remark": "^7.0.1",
-    "remark-html": "^6.0.0"
+    "remark-html": "^6.0.0",
+    "rimraf": "^2.6.1"
   },
   "license": "MIT",
   "main": "index.js",
