--- a/packages/mdast-directive-comment/package.json
+++ b/packages/mdast-directive-comment/package.json
@@ -35,6 +35,7 @@
     "build:es": "BABEL_ENV=es babel src -d dist/es --ignore test.js",
     "build:js": "babel src -d dist --ignore test.js",
     "build:libdef": "flow gen-flow-files src/index.js --out-dir dist --ignore '*.test.js'",
-    "prepublish": "yarn build"
+    "clean": "rimraf dist",
+    "prepublish": "yarn run clean && yarn build"
   }
 }
