--- a/packages/remark-insert-page-number/package.json
+++ b/packages/remark-insert-page-number/package.json
@@ -7,6 +7,16 @@
     "email": "masayuki@izumin.info",
     "url": "https://github.com/izumin5210"
   },
+  "dependencies": {
+    "defaults": "^1.0.3",
+    "mdast-util-to-hast": "^2.4.0",
+    "unist-builder": "^1.0.2",
+    "unist-util-visit": "^1.1.1"
+  },
+  "devDependencies": {
+    "remark-newpage-directive": "^0.1.0",
+    "remark-yaml-meta": "https://github.com/izumin5210/remark-yaml-meta.git#3387774"
+  },
   "bugs": "https://github.com/izumin5210/OHP/issues",
   "files": [
     "dist/"
