Support frontmatter in remark-newpage-directive

--- a/packages/remark-newpage-directive/package.json
+++ b/packages/remark-newpage-directive/package.json
@@ -8,10 +8,14 @@
     "url": "https://github.com/izumin5210"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "defaults": "^1.0.3",
     "mdast-directive-comment": "^0.1.1",
     "mdast-util-to-hast": "^2.4.0",
     "unist-builder": "^1.0.2"
+  },
+  "devDependencies": {
+    "remark-yaml-meta": "https://github.com/izumin5210/remark-yaml-meta.git#3387774"
   },
   "files": [
     "dist/"
