--- a/packages/remark-insert-page-number/package.json
+++ b/packages/remark-insert-page-number/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/izumin5210"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "defaults": "^1.0.3",
     "mdast-util-to-hast": "^2.4.0",
     "unist-builder": "^1.0.2",
