--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "babel-eslint": "^7.2.3",
     "babel-jest": "^20.0.3",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "conventional-changelog-cli": "^1.3.1",
     "eslint": "^3.19.0",
@@ -23,6 +23,8 @@
     "flow-typed": "^2.1.2",
     "jest": "^20.0.4",
     "lerna": "^2.0.0-rc.5",
+    "react": "^15.5.4",
+    "react-test-renderer": "^15.5.4",
     "remark": "^7.0.1",
     "remark-html": "^6.0.0",
     "rimraf": "^2.6.1"
