--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
   "env": {
     "development": {
+      "plugins": [
+        "transform-runtime",
+      ],
       "presets": [
         "es2015",
         "stage-2",
@@ -8,6 +11,9 @@
       ]
     },
     "test": {
+      "plugins": [
+        "transform-runtime",
+      ],
       "presets": [
         "es2015",
         "stage-2",
@@ -15,6 +21,9 @@
       ]
     },
     "es": {
+      "plugins": [
+        "transform-runtime",
+      ],
       "presets": [
         ["es2015", { "modules": false }],
         "stage-2",
