--- a/packages/processor/package.json
+++ b/packages/processor/package.json
@@ -9,6 +9,7 @@
   },
   "bugs": "https://github.com/izumin5210/OHP/issues",
   "dependencies": {
+    "babel-runtime": "^6.23.0",
     "deepmerge": "^1.3.2",
     "hast-util-sanitize": "^1.1.0",
     "remark": "^7.0.1",
