--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "flow-typed": "^2.1.2",
     "jest": "^20.0.4",
     "lerna": "^2.0.0-rc.5",
+    "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
     "react-test-renderer": "^15.6.1",
     "remark": "^7.0.1",
