--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-test-renderer": "^15.6.1",
     "remark": "^7.0.1",
     "remark-html": "^6.0.1",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "typescript": "^2.4.1"
   },
   "license": "MIT",
   "main": "index.js",
