--- a/packages/@ohp/app/package.json
+++ b/packages/@ohp/app/package.json
@@ -17,7 +17,7 @@
     "normalize.css": "^7.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
-    "react-ace": "^5.0.1",
+    "react-ace-multisession": "^0.0.1",
     "react-addons-perf": "^15.4.2",
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
